--- a/.github/workflows/publish-api-guidance.yaml
+++ b/.github/workflows/publish-api-guidance.yaml
@@ -2,6 +2,8 @@ name: publish-api-guidance
 
 on:
   push:
+    branches:
+      - main
     paths:
       - "DHSC.ANS.API.Consumer.Docs/output/**"
 
@@ -32,7 +34,7 @@ jobs:
       - name: Copy API Guidance Output
         run: |
           # Remove all files from the branch
-          git rm -rf .
+          git rm -rf . || echo "No files to remove"
           # Copy all files from the output folder to the root of the branch
           cp -R DHSC.ANS.API.Consumer.Docs/output/* .
           # Stage all files
