--- a/.gitignore
+++ b/.gitignore
@@ -289,7 +289,7 @@ FakesAssemblies/
 
 # Node.js Tools for Visual Studio
 .ntvs_analysis.dat
-node_modules/
+**/node_modules/
 
 # Visual Studio 6 build log
 *.plg
@@ -482,3 +482,6 @@ $RECYCLE.BIN/
 
 # Vim temporary swap files
 *.swp
+
+
+**/.terraform
