--- a/.github/workflows/deploy-azure.yml
+++ b/.github/workflows/deploy-azure.yml
@@ -29,7 +29,7 @@ jobs:
 
     - name: Terraform Init
       run: terraform init
-      working-directory: BOTGC.Infrastructure
+      working-directory: DHSC.ANS.Infrastructure
       env:
         ARM_CLIENT_ID: ${{ secrets.AZURE_CLIENT_ID }}
         ARM_CLIENT_SECRET: ${{ secrets.AZURE_CLIENT_SECRET }}
@@ -39,7 +39,7 @@ jobs:
     - name: Terraform Apply
       id: apply
       run: terraform apply -auto-approve
-      working-directory: BOTGC.Infrastructure
+      working-directory: DHSC.ANS.Infrastructure
       env:
         ARM_CLIENT_ID: ${{ secrets.AZURE_CLIENT_ID }}
         ARM_CLIENT_SECRET: ${{ secrets.AZURE_CLIENT_SECRET }}
@@ -53,7 +53,7 @@ jobs:
         web_app_name=$(terraform output -raw web_app_name)
         echo "web_app_name=${web_app_name}"
         echo "web_app_name=${web_app_name}" >> "$GITHUB_OUTPUT"
-      working-directory: BOTGC.Infrastructure
+      working-directory: DHSC.ANS.Infrastructure
       env:
         ARM_CLIENT_ID: ${{ secrets.AZURE_CLIENT_ID }}
         ARM_CLIENT_SECRET: ${{ secrets.AZURE_CLIENT_SECRET }}
