--- a/.github/workflows/deploy-azure.yml
+++ b/.github/workflows/deploy-azure.yml
@@ -17,6 +17,7 @@ jobs:
 
     outputs:
       web_app_name: ${{ steps.get_app_name.outputs.web_app_name }}
+      service_app_name: ${{ steps.get_app_name.outputs.service_app_name }}
 
     steps:
     - name: Checkout code
@@ -47,12 +48,13 @@ jobs:
         ARM_TENANT_ID: ${{ secrets.AZURE_TENANT_ID }}
         TF_VAR_x_api_key: ${{ secrets.X_API_KEY }}        
 
-    - name: Get Web App Name
+    - name: Get App Names
       id: get_app_name
       run: |
         web_app_name=$(terraform output -raw web_app_name)
-        echo "web_app_name=${web_app_name}"
+        service_app_name=$(terraform output -raw service_app_name)
         echo "web_app_name=${web_app_name}" >> "$GITHUB_OUTPUT"
+        echo "service_app_name=${service_app_name}" >> "$GITHUB_OUTPUT"
       working-directory: DHSC.ANS.Infrastructure
       env:
         ARM_CLIENT_ID: ${{ secrets.AZURE_CLIENT_ID }}
@@ -71,7 +73,7 @@ jobs:
     - name: Set up .NET
       uses: actions/setup-dotnet@v3
       with:
-        dotnet-version: '8.0.x'
+        dotnet-version: '9.0.x'
 
     - name: Publish API
       run: |
@@ -101,4 +103,47 @@ jobs:
         az webapp deploy --resource-group rg-dhsc-ans-prd-uks-001 \
           --name ${{ needs.terraform.outputs.web_app_name }} \
           --src-path published/api.zip \
+          --type zip
+
+  deploy-service:
+    runs-on: ubuntu-latest
+    needs: terraform
+
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v2
+
+    - name: Install Node
+      uses: actions/setup-node@v4
+      with:
+        node-version: '18'
+
+    - name: Install frontend dependencies
+      run: npm ci
+      working-directory: DHSC.ANS.Service
+
+    - name: Build frontend
+      run: npm run build
+      working-directory: DHSC.ANS.Service
+
+    - name: Zip frontend for deployment
+      run: zip -r service.zip . -x '*.git*'
+      working-directory: DHSC.ANS.Service
+
+    - name: Install Azure CLI
+      run: |
+        curl -sL https://aka.ms/InstallAzureCLIDeb | sudo bash
+
+    - name: Azure CLI Login
+      run: |
+        az login --service-principal \
+          -u ${{ secrets.AZURE_CLIENT_ID }} \
+          -p ${{ secrets.AZURE_CLIENT_SECRET }} \
+          --tenant ${{ secrets.AZURE_TENANT_ID }}
+
+    - name: Deploy to Service App
+      run: |
+        az webapp deploy --resource-group rg-dhsc-ans-prd-uks-001 \
+          --name ${{ needs.terraform.outputs.service_app_name }} \
+          --src-path DHSC.ANS.Service/service.zip \
           --type zip
