--- a/.github/workflows/deploy-azure.yml
+++ b/.github/workflows/deploy-azure.yml
@@ -75,6 +75,9 @@ jobs:
       with:
         dotnet-version: '9.0.x'
 
+    - name: Restore .NET local tools
+      run: dotnet tool restore
+
     - name: Publish API
       run: |
         dotnet publish DHSC.ANS.API.Consumer/DHSC.ANS.API.Consumer.csproj \
@@ -122,12 +125,10 @@ jobs:
       run: npm ci
       working-directory: DHSC.ANS.Service
 
-    - name: Build frontend
-      run: npm run build
-      working-directory: DHSC.ANS.Service
-
     - name: Zip frontend for deployment
-      run: zip -r service.zip . -x '*.git*'
+      run: |
+        npm ci
+        zip -r service.zip . -x '*.git*'
       working-directory: DHSC.ANS.Service
 
     - name: Install Azure CLI
