--- a/.github/workflows/deploy-azure.yml
+++ b/.github/workflows/deploy-azure.yml
@@ -121,7 +121,7 @@ jobs:
     - name: Install Node
       uses: actions/setup-node@v4
       with:
-        node-version: '20-lts'
+        node-version: '20'
 
     - name: Install frontend dependencies
       run: npm ci
