--- a/.github/workflows/deploy-azure.yml
+++ b/.github/workflows/deploy-azure.yml
@@ -111,41 +111,41 @@ jobs:
           --type zip
 
   deploy-service:
-    runs-on: ubuntu-latest
-    needs: terraform
+      runs-on: ubuntu-latest
+      needs: terraform
 
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
+      steps:
+        - name: Checkout code
+          uses: actions/checkout@v2
 
-    - name: Install Node
-      uses: actions/setup-node@v4
-      with:
-        node-version: '20'
+        - name: Install Node
+          uses: actions/setup-node@v4
+          with:
+            node-version: '20'
 
-    - name: Install frontend dependencies
-      run: npm ci
-      working-directory: DHSC.ANS.Service
+        - name: Install frontend dependencies
+          run: npm ci
+          working-directory: DHSC.ANS.Service
 
-    - name: Zip frontend for deployment
-      run: |
-        cd DHSC.ANS.Service
-        zip -r ../service.zip . -x '*.git*'
+        - name: Zip frontend for deployment
+          run: |
+            cd DHSC.ANS.Service
+            zip -r ../service.zip . -x '*.git*' -x 'node_modules/*'
 
-    - name: Install Azure CLI
-      run: |
-        curl -sL https://aka.ms/InstallAzureCLIDeb | sudo bash
+        - name: Install Azure CLI
+          run: |
+            curl -sL https://aka.ms/InstallAzureCLIDeb | sudo bash
 
-    - name: Azure CLI Login
-      run: |
-        az login --service-principal \
-          -u ${{ secrets.AZURE_CLIENT_ID }} \
-          -p ${{ secrets.AZURE_CLIENT_SECRET }} \
-          --tenant ${{ secrets.AZURE_TENANT_ID }}
+        - name: Azure CLI Login
+          run: |
+            az login --service-principal \
+              -u ${{ secrets.AZURE_CLIENT_ID }} \
+              -p ${{ secrets.AZURE_CLIENT_SECRET }} \
+              --tenant ${{ secrets.AZURE_TENANT_ID }}
 
-    - name: Deploy to Service App
-      run: |
-        az webapp deploy --resource-group rg-dhsc-ans-prd-uks-001 \
-          --name ${{ needs.terraform.outputs.service_app_name }} \
-          --src-path service.zip \
-          --type zip
+        - name: Deploy to Service App
+          run: |
+            az webapp deploy --resource-group rg-dhsc-ans-prd-uks-001 \
+              --name ${{ needs.terraform.outputs.service_app_name }} \
+              --src-path service.zip \
+              --type zip
