--- a/.github/workflows/deploy-azure.yml
+++ b/.github/workflows/deploy-azure.yml
@@ -11,7 +11,7 @@ on:
       - '.github/workflows/*.yml'
 
 env:
-  PROJECT_NAME: ans
+  PROJECT_NAME: ANS
   ENVIRONMENT: Alpha
   COST_CENTRE: HC01
   DEPARTMENT: Digital
