--- a/.github/workflows/deploy-azure.yml
+++ b/.github/workflows/deploy-azure.yml
@@ -91,8 +91,8 @@ jobs:
         run: echo "$HOME/.dotnet/tools" >> "$GITHUB_PATH"
   
       - name: Build API
-        run: dotnet publish DHSC.ANS.API.Consumer/DHSC.ANS.API.Consumer.csproj \
-             -c Release -r linux-x64 --self-contained true -o published
+        run: |
+          dotnet publish DHSC.ANS.API.Consumer/DHSC.ANS.API.Consumer.csproj -c Release -r linux-x64 --self-contained true -o published
   
       - name: Generate swagger.json
         run: |
