--- a/DHSC.ANS.API.Consumer/DHSC.ANS.API.Consumer.csproj
+++ b/DHSC.ANS.API.Consumer/DHSC.ANS.API.Consumer.csproj
@@ -46,4 +46,9 @@
     </None>
   </ItemGroup>
 
+  <Target Name="GenerateOpenApiSpec" AfterTargets="Build">
+    <!-- Run Swagger to generate the OpenAPI spec as swagger.json -->
+    <Exec Command="dotnet swagger tofile --output $(ProjectDir)swagger.json $(TargetDir)DHSC.ANS.API.Consumer.dll v1" />
+  </Target>
+
 </Project>
