--- a/.github/workflows/deploy-azure.yml
+++ b/.github/workflows/deploy-azure.yml
@@ -84,13 +84,12 @@ jobs:
         with:
           dotnet-version: '9.0.x'
   
-      - name: Install Swagger CLI and publish API
+      - name: Restore local tools and publish API
         run: |
-          dotnet tool install --global Swashbuckle.AspNetCore.Cli \
-            && echo "$HOME/.dotnet/tools" >> "$GITHUB_PATH" \
+          dotnet tool restore \
             && dotnet publish DHSC.ANS.API.Consumer/DHSC.ANS.API.Consumer.csproj \
                   -c Release -r linux-x64 --self-contained true -o published
-        
+                
       - name: Zip artefact
         run: zip -r api.zip . -x '*.git*'
         working-directory: published
