--- a/DHSC.ANS.Service/package.json
+++ b/DHSC.ANS.Service/package.json
@@ -6,8 +6,10 @@
   },
   "dependencies": {
     "@govuk-prototype-kit/common-templates": "2.0.1",
-    "govuk-frontend": "5.9.0",
+    "@ministryofjustice/frontend": "^5.1.3",
+    "govuk-frontend": "^5.9.0",
     "govuk-prototype-kit": "13.16.2",
-    "lodash.set": "^4.3.2"
+    "lodash.set": "^4.3.2",
+    "moment": "^2.30.1"
   }
 }
